# eurydice

./: .gitignore  Cargo.toml  README.md  less  package-lock.json  package.json  spec.md
eurydice_cli/: Cargo.toml
eurydice_cli/src/: lib.rs  main.rs
eurydice_cli/testdata/anydice/: blog_dnd_3.txt  blog_qin.txt  d_stuff.txt  doc_arbitrary_dice.txt  doc_contains.txt  doc_count_diy.txt  doc_explode_variant.txt  doc_highest_lowest_middle_diy.txt  doc_highest_of_lowest_of_diy.txt  doc_sequences.txt  doc_sort.txt  doc_sort_diy.txt  doc_string_with_variable.txt  explode.txt  highest_lowest_middle.txt  l5r.txt  multi_weight.txt  override_builtin.txt  return_empty_die.txt  return_types.txt  sort.txt  two_fanged_strike.txt
eurydice_cli/tests/: integration_test.rs
eurydice_engine/: Cargo.toml
eurydice_engine/benches/: benchmark.rs  test.eury
eurydice_engine/src/: ast.rs  dice.rs  eval.rs  grammar.lalrpop  lib.rs  output.rs
eurydice_engine/testdata/anydice/: at.txt  calc_successes.txt  colville.txt  doc_absolute.txt  doc_conditional_blocks.txt  doc_count.txt  doc_dice.txt  doc_explode.txt  doc_functions_parameter_types.txt  doc_functions_recursion.txt  doc_introspection.txt  doc_introspection_position_order.txt  doc_maximum.txt  doc_maximum_diy.txt  dynamic_scoping.txt  invert.txt  keywords_in_function_name.txt  list_comparison.txt
eurydice_engine/tests/: integration_test.rs
eurydice_wasm/: Cargo.toml
eurydice_wasm/src/: lib.rs
eurydice_www/: .prettierignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
eurydice_www/about/: index.html  main.tsx
eurydice_www/public/: eurydice_wasm.js
eurydice_www/src/: About.mdx  App.tsx  WorkerWrapper.ts  eurydice_wasm_bg.wasm  lezer-grammar.grammar  printTree.ts  util.ts  worker-wrapper.ts  worker.js
eurydice_www/src/components/: DarkModeSwitcher.tsx  EditorPane.tsx  Icons.tsx  OutputPane.tsx  Spinner.tsx  Tooltip.tsx  Tutorial.tsx
eurydice_www/src/grammar/: eurydice.grammar  eurydice.terms.ts  eurydice.ts
src/: analyze.rs  ast.rs  dice.rs  distribution.rs  eval.rs  grammar.lalrpop  lang.rs  main.rs  output.rs  parse.rs  probability.rs  tiny_grammar.lalrpop  typecheck.rs  util.rs
testdata/anydice/: blog_exalted_2.txt  blog_nwod.txt  compare_dice.txt  count_nested_d.txt  d_stuff.txt  doc_absolute_diy.txt  doc_arbitrary_dice.txt  doc_contains_diy.txt  doc_explode_diy.txt  doc_functions.txt  doc_highest_lowest_middle.txt  doc_highest_of_lowest_of.txt  doc_looping.txt  doc_reverse.txt  doc_reverse_diy.txt  doc_sequences.txt  doc_string_with_variable.txt  dynamic_scoping.txt  function_call_expr.txt  keywords_in_function_name.txt  length.txt  match_in_sequence.txt  negate.txt  number_of_rolls.txt  potions.txt  return_empty_die.txt  return_types.txt  weighted.txt
tests/: integration_test.rs
