[package]
name = "everydice"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-lexpr = "0.1.3"
thiserror = "1.0.63"
pretty = "0.12.3"
lexpr = "0.2.7"

[build-dependencies]
cc="*"
