[package]
name = "everydice"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-lexpr = "0.1.3"
thiserror = "1.0.63"
pretty = "0.12.3"
lexpr = "0.2.7"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
rustyline = "14.0.0"
lazy_static = "1.5.0"
malachite = "0.4.14"

[build-dependencies]
cc="*"
lalrpop = "0.20.2"

[dev-dependencies]
approx = "0.5.1"
