[package]
name = "everydice"
version = "0.1.0"
edition = "2021"

[dependencies]
# Used to output distributions vaguely fancily.
crossterm = "0.28.1"

# Used to report errors nicely.
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.63"

# Serde, serde-lexpr and pretty are just used to print the AST
serde = { version = "1.0.204", features = ["derive"] }
serde-lexpr = "0.1.3"
pretty = "0.12.3"
lexpr = "0.2.7"

# Parser stuff
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

# Used for the REPL
rustyline = "14.0.0"

# Used for bigints
malachite = "0.4.14"

# Random utility stuff
lazy_static = "1.5.0"

[build-dependencies]
cc="*"
lalrpop = "0.20.2"

[dev-dependencies]
approx = "0.5.1"
