[package]
name = "eurydice_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
eurydice_engine = { path = "../eurydice_engine" }
lalrpop-util = "0.20.2"
rustyline = "14.0.0"
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
approx = "0.5.1"
csv = "1.3.0"
thiserror = "1.0.63"
