[package]
name = "eurydice_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "eurydice_engine"
path = "src/lib.rs"

[lints.clippy]
cast_possible_wrap = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

[dependencies]
# Used to report errors nicely.
miette = "7.2.0"
thiserror = "1.0.63"

# Serde derive is used for testing only, but we need it here to derive
# the traits.
serde = { version = "1.0.204", features = ["derive", "rc"] }

# Parser stuff
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

# Used for bigints
malachite = "0.4.14"

# Random utility stuff
lazy_static = "1.5.0"

# Used for multiset iteration
tinyvec = { version = "1.8.0", features = ["alloc"] }

[build-dependencies]
cc="*"
lalrpop = "0.20.2"

[dev-dependencies]
serde-lexpr = "0.1.3"
